# thevalley_tfm

./: app.py  modelo.pkl  pyproject.toml  test.py
